# codewithbrain_blog

./: .coverage  .dockerignore  .gitignore  .railwayignore  Dockerfile  README.md  Railway.json  analyze_coverage.py  docker-compose.yml  nginx.conf  nixpacks.toml  procfile.txt  procfile.yml  pyproject.toml  pytest.ini  railway-setup.sh  requirements.txt  simple_coverage_report.py  start.sh
blog/: admin.py  api.py  apps.py  middleware.py  models.py  signals.py  urls.py  views.py
blog/management/commands/: logs.py
blog/migrations/: 0001_initial.py
blog/templatetags/: custom_filters.py
config/: settings.py  urls.py
templates/: base.html
templates/blog/: post_detail.html  post_list.html
tests/: conftest.py  test-codewithbrain.txt  test_api.py  test_blog.py  test_config.py  test_custom_filters.py  test_functional.py  test_middleware.py  test_models_edge_cases.py  test_signals.py  test_static_media.py  test_views.py
